django_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app : my-k8s-application
spec:
  selector:
    matchLabels:
      project: k8s-lesson1
  template:
    metadata:
      name  : web
      labels:
        project: k8s-lesson1
    spec:
      containers:
      - name : djangoapp
        image: docker.io/library/djangoapp:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    project: k8s-lesson1
  ports:
  - name      : app-listener
    protocol  : TCP
    port      : 80
    targetPort: 80
  type: NodePort
